<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LocDO</string>
    <string name="title_activity_location_todo">LocationTodo</string>
    <!-- List Fragment -->
    <string name="list_activity_label">LocDo</string>
    <string name="list_no_item_label">No Location Tasks, Click on the add button to create new ones</string>
    <string name="no_network_label">Network Connection Error. Please check your network settings.</string>
    <string name="add_new_label">New Task</string>

    <!-- Detail Fragment -->
    <string name="detail_activity_label">Task Details</string>
    <string name="name_label">Name*(Required)</string>
    <string name="name_hint">Enter Name of TODO</string>
    <string name="descr_label">Description</string>
    <string name="descr_hint">Enter Description</string>
    <string name="location_label">Location</string>
    <string name="enter_location_label">Enter Location</string>
    <string name="enable_location_alert_label">Enable Location Alert</string>
    <string name="latitude_hint">Latitude</string>
    <string name="longitude_hint">Longitude</string>
    <string name="location_descr_hint">Place</string>
    <string name="radius_label">Radius(miles)</string>
    <string name="priority_label">Priority</string>
    <string name="radius_hint">Enter Radius for Location Alert(in miles)</string>
    <string name="duedate_label">Due Date</string>
    <string name="select_duedate_label">Select Due Date</string>
    <string name="completed_label">Done</string>
    <string name="save_label">Save</string>
    <string name="cancel_label">Cancel</string>
    <string name="date_picker_title">Due Date:</string>
    <!-- List Fragment -->
    <string name="title_activity_list">List of Tasks</string>
    <!--  Action Bar -->
    <string name="new_location_todo">New Todo</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle">Sub Title</string>
    <string name="delete_todo">Delete</string>
    <!--  Pick Location -->
    <string name="enter_location_activity_label">Enter Location</string>
    <string name="enter_location_auto_hint">Enter Name of Place or Address</string>
    <string name="enter_location_manually">Done Entering Location</string>
    <string name="map_fragment_desc">Google Map</string>
    <!-- Notifications -->
    <string name="add_fence_msg_title">Geofences Enter Detected</string>
    <string name="add_fence_msg">Entering Geofence(s) for Tasks:%1$s</string>
    <string name="remove_fence_msg_title">Geofences Exit Detected</string>
    <string name="remove_fence_msg">Exiting Geofence(s) for Tasks:%1$s</string>


    <!-- Error Messages -->
    <string name="name_required">Name is Required</string>
    <string name="location_required">For Location Alerts enter Location info. Use Enter Location Button or input Latitude and Longitude.</string>
    <string name="due_date_future">Due Date can not be in past.</string>
    <!-- Alert Messages -->
    <string name="enter_location">Enter Location Information for alert</string>
    <string name="enter_coordinates">Enter Name and Coordinates of the Location</string>



    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Location permissions are needed for creating GeoFences for task reminder"
    </string>
    <string name="login_wait_dailog_title">Processing...</string>
    <string name="login_wait_dailog_text">Please wait.</string>


    <string name="content_authority">com.ganwal.locationTodo.db.LocalContentProvider</string>
    <string name="selected_count">%1$s Items Selected</string>

    <string name="action_delete">Delete</string>
    <string name="action_done">Done</string>
    <!-- Preference Screen -->
    <string name="pref_sort_order_label">Sort Order</string>
    <string name="pref_sort_order_summary">Change Sort Order of Todos</string>
    <string name="dialog_title_list_preference">ToDos Sort Order</string>
    <string name="title_activity_settings">Application Settings</string>
    <string name="pref_show_completed_title">Show Completed Tasks</string>
    <string name="pref_show_completed_summary">Select this option if you want to see the tasks you have marked completed</string>

    <!-- Widgets -->
    <string name="task_priority_widget_heading">Critical/Urgent Tasks</string>
    <string name="priority_widget_no_item_label">No Critical or Urgent Tasks</string>

    <!-- Google -->
    <string name="google_client_id">GOOGLE_CLIENT_ID</string>
    <string name="api_key">API_KEY</string>
    <string name="gms_version">7895000</string>

    <!-- Webservice URL -->
    <string name="locdo_webservice_base_url">https://locationtodoservice.appspot.com/rest/</string>

</resources>
