<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical" >

    <AutoCompleteTextView
        android:id="@+id/enter_location_auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/enter_location_auto_hint"
        android:hint="@string/enter_location_auto_hint" 
        />

    <Space android:layout_width="match_parent"
           android:layout_height="30dp" />

    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:contentDescription="@string/map_fragment_desc"
        class="com.google.android.gms.maps.MapFragment" />

    <Space android:layout_width="match_parent"
        android:layout_height="30dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/latitude_hint"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/longitude_hint"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <Space android:layout_width="match_parent"
        android:layout_height="30dp" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Colored"
        android:contentDescription="@string/enter_location_manually"
        android:text="@string/enter_location_manually" />

    <Space android:layout_width="match_parent"
        android:layout_height="30dp" />

</LinearLayout>